# lem_in

./: ._draw_circle.c  ._lem_in.h  ._main.c  CMakeLists.txt  Makefile  README.md  draw_circle.c  ft_adjecency_matrix.c  ft_check_data.c  ft_dfs.c  ft_draw_graph.c  ft_error.c  ft_free.c  ft_move_lems.c  ft_optimize_path.c  ft_other.c  ft_path_search.c  ft_pixel.c  ft_print.c  ft_process_nodes.c  ft_process_path.c  ft_process_queue.c  ft_process_rooms.c  ft_rooms.c  ft_set_Data.c  ft_set_data.c  get_next_line.c  get_next_line.h  lem_in.h  main.c  visual
libft/: ._get_next_line.c  ._get_next_line.h  ft_printf.h  get_next_line.c  get_next_line.h
maps/: ._Lem_in_Kiev_subway.txt  ._test.txt  ._tra.txt  4_m.txt  Lem_in_Kiev_subway.txt  algo_2.txt  algo_3.txt  algo_600.txt  example.txt  gen_11.txt  t.txt  test_illia.txt  test_illia_2.txt  to_test.txt  tra.txt  ttt.txt  visual.txt
minilibx/: ._=README=  ._Makefile  ._Makefile.gen  ._Makefile.mk  ._configure  ._man  ._mlx.h  ._mlx_clear_window.c  ._mlx_destroy_image.c  ._mlx_destroy_window.c  ._mlx_expose_hook.c  ._mlx_flush_event.c  ._mlx_get_color_value.c  ._mlx_get_data_addr.c  ._mlx_hook.c  ._mlx_init.c  ._mlx_int.h  ._mlx_int_anti_resize_win.c  ._mlx_int_do_nothing.c  ._mlx_int_get_visual.c  ._mlx_int_param_event.c  ._mlx_int_set_win_event_mask.c  ._mlx_int_str_to_wordtab.c  ._mlx_int_wait_first_expose.c  ._mlx_key_hook.c  ._mlx_lib_xpm.c  ._mlx_loop.c  ._mlx_loop_hook.c  ._mlx_mouse_hook.c  ._mlx_new_image.c  ._mlx_new_window.c  ._mlx_pixel_put.c  ._mlx_put_image_to_window.c  ._mlx_rgb.c  ._mlx_string_put.c  ._mlx_xpm.c  ._mlx_xpm.c.ok  ._rgb2c.pl  ._test
minilibx/man/: ._man3
minilibx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
minilibx/test/: ._Makefile.gen  ._Makefile.mk  ._main.c  ._new_win.c  ._open.xpm  ._open24.xpm  ._open30.xpm
