project(Lem_in)

set(CMAKE_C_FLAGS "-lmlx -lm -framework OpenGL -framework AppKit -std=c99")

set(SOURCE_FILES
        ft_print.c
        ft_rooms.c
        main.c
        draw_circle.c
        ft_set_Data.c
        maps
        ft_path_search.c
        ft_adjecency_matrix.c
        get_next_line.c
        mlx.h
        ft_check_data.c
        get_next_line.h
        ft_other.c
        lem_in.h
        libft/ft_atoi.c
        libft/ft_lstiter.c
        libft/ft_strcmp.c
        libft/ft_bzero.c
        libft/ft_lstmap.c
        libft/ft_strcpy.c
        libft/ft_capitalize.c
        libft/ft_lstnew.c
        libft/ft_strdel.c
        libft/ft_char.c
        libft/ft_memalloc.c
        libft/ft_strdup.c
        libft/ft_conversion.c
        libft/ft_memccpy.c
        libft/ft_strequ.c
        libft/ft_convert_type.c
        libft/ft_memchr.c
        libft/ft_string.c
        libft/ft_count_prec.c
        libft/ft_memcmp.c
        libft/ft_striter.c
        libft/ft_decimal.c
        libft/ft_memcpy.c
        libft/ft_striteri.c
        libft/ft_decimal_2.c
        libft/ft_memdel.c
        libft/ft_strjoin.c
        libft/ft_flags.c
        libft/ft_memmove.c
        libft/ft_strlcat.c
        libft/ft_flags_2.c
        libft/ft_memset.c
        libft/ft_strlen.c
        libft/ft_hexadecimal.c
        libft/ft_numbers.c
        libft/ft_strmap.c
        libft/ft_isalnum.c
        libft/ft_octal.c
        libft/ft_strmapi.c
        libft/ft_isalpha.c
        libft/ft_printf.c
        libft/ft_strncat.c
        libft/ft_isany.c
        libft/ft_printf.h
        libft/ft_strncmp.c
        libft/ft_isascii.c
        libft/ft_putchar.c
        libft/ft_strncpy.c
        libft/ft_isdigit.c
        libft/ft_putchar_fd.c
        libft/ft_strnequ.c
        libft/ft_islower.c
        libft/ft_putendl.c
        libft/ft_strnew.c
        libft/ft_isprint.c
        libft/ft_putendl_fd.c
        libft/ft_strnstr.c
        libft/ft_isspace.c
        libft/ft_putnbr.c
        libft/ft_strrchr.c
        libft/ft_isupper.c
        libft/ft_putnbr_fd.c
        libft/ft_strsplit.c
        libft/ft_itoa.c
        libft/ft_putstr.c
        libft/ft_strstr.c
        libft/ft_itoa_base.c
        libft/ft_putstr_fd.c
        libft/ft_strsub.c
        libft/ft_itoa_base_2.c
        libft/ft_star_n.c
        libft/ft_strtrim.c
        libft/ft_lstadd.c
        libft/ft_strcat.c
        libft/ft_tolower.c
        libft/ft_lstdel.c
        libft/ft_strchr.c
        libft/ft_toupper.c
        libft/ft_lstdelone.c
        libft/ft_strclr.c
        libft/libft.h
        ft_move_lems.c)
add_executable(Lem_in ${SOURCE_FILES})